nginx/nginx-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-cm-1
  labels:
    app: nginx
spec:
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        ports:
        - containerPort: 9000
          protocol: TCP
          name: http
        volumeMounts:
        - mountPath: "/etc/nginx/conf.d"
          name: nginx-cm
      volumes:
      - configMap:
          name: nginx-config
        name: nginx-cm
